DuPont DevSB/src/objects/Functional_Design_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Keep_SP_dimensions_same_for_all_the_size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep SP dimensions same for all the size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Large Size</description>
        <label>L Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>M_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Medium size</description>
        <label>M Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Molle_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Molle System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Names_of_Labs__c</fullName>
        <label>Names of Labs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP White</fullName>
                </value>
                <value>
                    <fullName>TNO</fullName>
                </value>
                <value>
                    <fullName>Banc Saint-Etienne Test Facility</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>CFSL</fullName>
                </value>
                <value>
                    <fullName>TBRL</fullName>
                </value>
                <value>
                    <fullName>Kolas, Samyang</fullName>
                </value>
                <value>
                    <fullName>Beschussamt Mellrichstadt (Germany)</fullName>
                </value>
                <value>
                    <fullName>Banco Nazionale di Prova in Gardone Val Trompia (Italy)</fullName>
                </value>
                <value>
                    <fullName>Ballistic and Mechanical Testing Pty Ltd (BMT-NATA Accr. 13310) Melbourne Australia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neck_and_Collar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neck and Collar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_L__c</fullName>
        <label>Outer carrier weight L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_M__c</fullName>
        <label>Outer carrier weight M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_S__c</fullName>
        <label>Outer carrier weight S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_XL__c</fullName>
        <label>Outer carrier weight XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_XS__c</fullName>
        <label>Outer carrier weight XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_carrier_weight_XXL__c</fullName>
        <label>Outer carrier weight XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Flexibility_Reference_OtherComment__c</fullName>
        <label>Panel Flexibility Reference OtherComment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Flexibility_Reference__c</fullName>
        <label>Panel Flexibility Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abrasion test –ASTM D4966 -12</fullName>
                </value>
                <value>
                    <fullName>Flexibility Test – CREL</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panel_Flexibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Panel Flexibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plate_Design_of_BP__c</fullName>
        <label>Plate Design of BP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Curved</fullName>
                </value>
                <value>
                    <fullName>Multi Curved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plate_Design_of_SP__c</fullName>
        <label>Plate Design of SP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Curved</fullName>
                </value>
                <value>
                    <fullName>Multi Curved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plate_Design_of_front_plate__c</fullName>
        <label>Plate Design of FP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Curved</fullName>
                </value>
                <value>
                    <fullName>Multi Curved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plate_Pockets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plate Pockets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pouches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pouches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Lower_Limit_M__c</fullName>
        <label>SAP Lower Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:0</fullName>
                </value>
                <value>
                    <fullName>B:0</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
                <value>
                    <fullName>E:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Middle_Value_M__c</fullName>
        <label>SAP Middle Value M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:520</fullName>
                </value>
                <value>
                    <fullName>B:279</fullName>
                </value>
                <value>
                    <fullName>C:196</fullName>
                </value>
                <value>
                    <fullName>D:339</fullName>
                </value>
                <value>
                    <fullName>E:394</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Upper_Limit_M__c</fullName>
        <label>SAP Upper Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:800</fullName>
                </value>
                <value>
                    <fullName>B:800</fullName>
                </value>
                <value>
                    <fullName>C:800</fullName>
                </value>
                <value>
                    <fullName>D:800</fullName>
                </value>
                <value>
                    <fullName>E:800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_L__c</fullName>
        <label>SAP pouch weight L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_M__c</fullName>
        <label>SAP pouch weight M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_S__c</fullName>
        <label>SAP pouch weight S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_XL__c</fullName>
        <label>SAP pouch weight XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_XS__c</fullName>
        <label>SAP pouch weight XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_pouch_weight_XXL__c</fullName>
        <label>SAP pouch weight XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Small Size of Armor</description>
        <label>S Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shoulder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shoulder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Side_plate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Side plate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StandardName__c</fullName>
        <label>StandardName</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banc Saint-Etienne Test Facility</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>CFSL</fullName>
                </value>
                <value>
                    <fullName>TBRL</fullName>
                </value>
                <value>
                    <fullName>Kolas, Samyang</fullName>
                </value>
                <value>
                    <fullName>Beschussamt Mellrichstadt (Germany)</fullName>
                </value>
                <value>
                    <fullName>HP White</fullName>
                </value>
                <value>
                    <fullName>Ballistic and Mechanical Testing Pty Ltd (BMT-NATA Accr. 13310) Melbourne Australia</fullName>
                </value>
                <value>
                    <fullName>Banco Nazionale di Prova in Gardone Val Trompia (Italy)</fullName>
                </value>
                <value>
                    <fullName>TNO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_L__c</fullName>
        <label>Surface Area BP size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_M__c</fullName>
        <label>Surface Area BP size M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_S__c</fullName>
        <label>Surface Area BP size S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_XL__c</fullName>
        <label>Surface Area BP size XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_XS__c</fullName>
        <label>Surface Area BP size XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_BP_size_XXL__c</fullName>
        <label>Surface Area BP size XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_L__c</fullName>
        <label>Surface Area FP size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_M__c</fullName>
        <label>Surface Area FP size M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_S__c</fullName>
        <label>Surface Area FP size S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_XL__c</fullName>
        <label>Surface Area FP size XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_XS__c</fullName>
        <label>Surface Area FP size XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_FP_size_XXL__c</fullName>
        <label>Surface Area FP size XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_L__c</fullName>
        <label>Surface Area SP size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_M__c</fullName>
        <label>Surface Area SP size M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_S__c</fullName>
        <label>Surface Area SP size S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_XL__c</fullName>
        <label>Surface Area SP size XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_XS__c</fullName>
        <label>Surface Area SP size XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_SP_size_XXL__c</fullName>
        <label>Surface Area SP size XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_L__c</fullName>
        <label>Surface Area of  Body Armour L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_M__c</fullName>
        <label>Surface Area of  Body Armour M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_S__c</fullName>
        <label>Surface Area of  Body Armour S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_XL__c</fullName>
        <label>Surface Area of  Body Armour XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_XS__c</fullName>
        <label>Surface Area of Body Armour XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_Body_Armour_XXL__c</fullName>
        <label>Surface Area of  Body Armour XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_L__c</fullName>
        <label>Surface Area of  SAP Pouch L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_M__c</fullName>
        <label>Surface Area of  SAP Pouch M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_S__c</fullName>
        <label>Surface Area of  SAP Pouch S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_XL__c</fullName>
        <label>Surface Area of  SAP Pouch XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_XS__c</fullName>
        <label>Surface Area of  SAP Pouch XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_Area_of_SAP_Pouch_XXL__c</fullName>
        <label>Surface Area of  SAP Pouch XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Lab_Comment__c</fullName>
        <label>Test Lab Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Thickness_Limit_of_BP__c</fullName>
        <label>Thickness Limit of BP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thickness_Limit_of_SAP__c</fullName>
        <label>Thickness Limit of SAP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thickness_Limit_of_SP__c</fullName>
        <label>Thickness Limit of SP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thickness_Limit_of_front_plate__c</fullName>
        <label>Thickness Limit of front plate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_party_test_certificate_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third party test certificate required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_party_testing_standards__c</fullName>
        <label>Third-party testing standards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP White</fullName>
                </value>
                <value>
                    <fullName>TNO</fullName>
                </value>
                <value>
                    <fullName>Banc Saint-Etienne Test Facility</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>CFSL</fullName>
                </value>
                <value>
                    <fullName>TBRL</fullName>
                </value>
                <value>
                    <fullName>Kolas, Samyang</fullName>
                </value>
                <value>
                    <fullName>Beschussamt Mellrichstadt (Germany)</fullName>
                </value>
                <value>
                    <fullName>Banco Nazionale di Prova in Gardone Val Trompia (Italy)</fullName>
                </value>
                <value>
                    <fullName>Ballistic and Mechanical Testing Pty Ltd (BMT-NATA Accr. 13310) Melbourne Australia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_L__c</fullName>
        <label>Total weight body armor L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_M__c</fullName>
        <label>Total weight body armor M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_S__c</fullName>
        <label>Total weight body armor S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_XL__c</fullName>
        <label>Total weight body armor XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_XS__c</fullName>
        <label>Total weight body armor XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_body_armor_XXL__c</fullName>
        <label>Total weight body armor XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_L__c</fullName>
        <label>Weight limit  HAP L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_M__c</fullName>
        <label>Weight limit  HAP M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_S__c</fullName>
        <label>Weight limit  HAP S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_XL__c</fullName>
        <label>Weight limit  HAP XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_XS__c</fullName>
        <label>Weight limit  HAP XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_HAP_XXL__c</fullName>
        <label>Weight limit  HAP XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_L__c</fullName>
        <label>Weight limit SAP L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_M__c</fullName>
        <label>Weight limit SAP M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_S__c</fullName>
        <label>Weight limit SAP S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_XL__c</fullName>
        <label>Weight limit SAP XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_XS__c</fullName>
        <label>Weight limit SAP XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_limit_SAP_XXL__c</fullName>
        <label>Weight limit SAP XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XL_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Extra Large Size</description>
        <label>XL Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XS_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <label>XS Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XXL_Size__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Xtra Xtra Large Size</description>
        <label>XXL Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_L__c</fullName>
        <label>groinSurfaceArea_L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_M__c</fullName>
        <label>groinSurfaceArea_M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_S__c</fullName>
        <label>groinSurfaceArea_S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_XL__c</fullName>
        <label>groinSurfaceArea_XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_XS__c</fullName>
        <label>groinSurfaceArea_XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groinSurfaceArea_XXL__c</fullName>
        <label>groinSurfaceArea_XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_L__c</fullName>
        <label>neckCollarSurfaceArea_L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_M__c</fullName>
        <label>neckCollarSurfaceArea_M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_S__c</fullName>
        <label>neckCollarSurfaceArea_S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_XL__c</fullName>
        <label>neckCollarSurfaceArea_XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_XS__c</fullName>
        <label>neckCollarSurfaceArea_XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>neckCollarSurfaceArea_XXL__c</fullName>
        <label>neckCollarSurfaceArea_XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_L__c</fullName>
        <label>shoulderLRSurfaceArea_L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_M__c</fullName>
        <label>shoulderLRSurfaceArea_M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_S__c</fullName>
        <label>shoulderLRSurfaceArea_S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_XL__c</fullName>
        <label>shoulderLRSurfaceArea_XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_XS__c</fullName>
        <label>shoulderLRSurfaceArea_XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shoulderLRSurfaceArea_XXL__c</fullName>
        <label>shoulderLRSurfaceArea_XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_L__c</fullName>
        <label>torsoSurfaceArea_L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_M__c</fullName>
        <label>torsoSurfaceArea_M</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_S__c</fullName>
        <label>torsoSurfaceArea_S</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_XL__c</fullName>
        <label>torsoSurfaceArea_XL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_XS__c</fullName>
        <label>torsoSurfaceArea_XS</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>torsoSurfaceArea_XXL__c</fullName>
        <label>torsoSurfaceArea_XXL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>BA Functional Design Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BA_Configuration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Body Armor Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Functional Design Requirements</pluralLabel>
    <recordTypes>
        <fullName>Body_Armor_FD</fullName>
        <active>false</active>
        <description>This is body armor functional design specifications</description>
        <label>Body Armor FD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Body_Armor_Functional_Design</fullName>
        <active>true</active>
        <label>Body Armor Functional Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAP_Functional_Design</fullName>
        <active>true</active>
        <label>HAP Functional Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Requirement</fullName>
        <active>true</active>
        <label>Other Requirement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>